# DeepTrafficByLLM

./: .gitignore  README.md  experiment.md  pyproject.toml  requirements.txt  run_validation.sh  setup_env.sh
paper/: paper.tex
prompt_em/: README.md  references.md  validate.py
prompt_em/config/: default.yaml  diag_template.yaml  em_v2_template.yaml  em_v3_large.yaml  heuristics.yaml  smoke.yaml  wording_sequence.yaml
prompt_em/prompt_em/: __init__.py  cli.py  experiment.py  heuristics.py  optimizer.py  plotting.py  render.py  runner.py  synthesize.py
prompt_em/results/diag_template/: iterations.jsonl  manifest.json  report.md  summary.json
prompt_em/results/em_v1/: iterations.jsonl  manifest.json  report.md  summary.json
prompt_em/results/em_v2_template/: iterations.jsonl  manifest.json
prompt_em/results/em_v3_large/: iterations.jsonl  manifest.json  report.md  summary.json
prompt_em/results/smoke/: iterations.jsonl  report.md
prompt_em/results/wording_sequence/: iterations.jsonl  manifest.json  report.md  summary.json
reference/: ENGINE_NOTES.md  VALIDATION.md
reference/node_ref/: package.json  run_ref.js
reference/original_js/: gameopt.js  net.js  site.js
scripts/: analyze_failures.py  bakeoff_conventions.py  confirm_h5.py  disagree.py  eval_llm_11car.py  eval_pure3b.py  h6_variance.py  nocache_check.py  probe2.py  probe_prompt.py  prompt_lab.py  sweep_aggressive.py  sweep_anticipation.py  sweep_courtesy.py  sweep_h6.py  sweep_speedaware.py  variance_h5.py
src/deeptraffic/: __init__.py  engine.py  env.py
tests/: test_fidelity.py
(+8 files in other folders)
